crates/biome_js_analyze/tests/specs/nursery/noPlaywrightElementHandle/invalid/frame.js
/* should generate diagnostics */
const element = await frame.$('#element');

